fix: disqus not showing

--- a/style.css
+++ b/style.css
@@ -206,3 +206,7 @@ button:hover {
     transform: translateX(25px);
 }
 
+#disqus_thread {
+    margin-top: 2rem;
+}
+
